--- a/app/src/main/res/layout/activity_charge_history.xml
+++ b/app/src/main/res/layout/activity_charge_history.xml
@@ -41,7 +41,7 @@
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:lineSpacingExtra="8sp"
-        android:text="충전 상황"
+        android:text="서비스 내역"
         android:textColor="@color/ks_gray"
         android:textSize="26dp"
         android:textStyle="normal"
