--- a/app/src/main/res/layout/activity_fee.xml
+++ b/app/src/main/res/layout/activity_fee.xml
@@ -23,7 +23,7 @@
         android:layout_marginBottom="20dp"
         android:gravity="center_horizontal"
         android:lineSpacingExtra="8sp"
-        android:text="08월 14일 실시간 요금표"
+        android:text="지난 하루 동안의 요금"
         android:textColor="@color/ks_gray"
         android:textSize="21dp"
         android:textStyle="normal"
@@ -69,6 +69,6 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView10"
-        app:layout_constraintVertical_bias="0.32999998" />
+        app:layout_constraintVertical_bias="0.29000002" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
