--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -107,7 +107,7 @@
                     android:id="@+id/iv_battery"
                     android:layout_width="150dp"
                     android:layout_height="70dp"
-                    android:layout_marginTop="15dp"
+                    android:layout_marginTop="20dp"
                     app:layout_constraintStart_toStartOf="@+id/tv_station"
                     app:layout_constraintTop_toBottomOf="@+id/tv_car_company"
                     app:srcCompat="@drawable/battery3" />
@@ -118,9 +118,12 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="35dp"
                     android:layout_marginTop="3dp"
+                    android:layout_marginEnd="10dp"
                     android:text="제주시 애월읍 제1 충전소"
                     android:textColor="@color/ks_gray"
                     android:textSize="18dp"
+                    app:layout_constraintEnd_toStartOf="@+id/iv_next"
+                    app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/iv_next" />
 
@@ -129,9 +132,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
+                    android:layout_marginEnd="20dp"
                     android:text="현대 아이오닉 V5"
                     android:textColor="@color/ks_gray"
                     android:textSize="24dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="@+id/tv_station"
                     app:layout_constraintTop_toBottomOf="@+id/tv_station" />
 
