--- a/app/src/main/res/layout/activity_reserve_service.xml
+++ b/app/src/main/res/layout/activity_reserve_service.xml
@@ -67,7 +67,7 @@
         android:layout_marginTop="20dp"
         android:backgroundTint="@color/eg_pastel_red"
         android:onClick="onClick"
-        android:text="충방전 동시"
+        android:text="충·방전 동시"
         android:textSize="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -81,7 +81,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
         android:lineSpacingExtra="6dp"
-        android:text="1. 충전만: 실시간 요금제에 따라 요금이 가장 낮을 떄 충전을 진행합니다.\n2. 방전만: 실시간 요금제에 따라 요금이 가장 높을 때 배터리에 있는 전기를 팔아 돈을 벌 수 있습니다.\n3. 충방전 동시: 충전과 방전을 동시에 진행하여 시세 차익을 얻음과 동시에, 100%까지 충전을 진행할 수 있는 서비스입니다."
+        android:text="1. 충전만: 실시간 요금제에 따라 요금이 가장 낮을 떄 충전을 진행합니다.\n2. 방전만: 실시간 요금제에 따라 요금이 가장 높을 때 배터리에 있는 전기를 팔아 돈을 벌 수 있습니다.\n3. 충·방전 동시: 충전과 방전을 동시에 진행하여 시세 차익을 얻음과 동시에, 100%까지 충전을 진행할 수 있는 서비스입니다."
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_charge_both" />
