--- a/app/src/main/res/layout/activity_point.xml
+++ b/app/src/main/res/layout/activity_point.xml
@@ -23,7 +23,7 @@
         app:layout_constraintVertical_bias="0.31" />
 
     <TextView
-        android:id="@+id/textView42"
+        android:id="@+id/tv_point"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
@@ -76,5 +76,5 @@
         android:textSize="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView42" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_point" />
 </androidx.constraintlayout.widget.ConstraintLayout>
